# climbing-wire

./: .gitignore  README.md  pyproject.toml
notebooks/: dtw_match.ipynb  homography_s01.ipynb  joint_track01.ipynb  joint_track_01.ipynb  limb_track01.ipynb  video_load01.ipynb  wireframe_detect.ipynb
src/climbing_wire/fastdtw/: fastdtw.py
src/climbing_wire/homography/: homography.py
src/climbing_wire/joint_tracker/: joint_hist.py  joint_tracker.py
src/climbing_wire/landmark/: compute.py  drawing.py  landmark_list.py
src/climbing_wire/utils/: cv.py  data.py  mediapipe.py
src/climbing_wire/video/: frame.py  load.py
