[tool.poetry]
name = "climbing-wire"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "climbing_wire", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.9.2.1"
black = "^23.1.0"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
opencv-contrib-python = "^4.7.0.72"
pandas = "^1.5.3"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
force_sort_within_sections = true
multi_line_output = 3